...

    <!--Build tabs-->
    <string name="tab_overview">Overview</string>
    <string name="tab_changes">Changes</string>
    <string name="tab_tests">Tests</string>
    <string name="tab_build_log">Build Log</string>
    <string name="tab_artifacts">Artifacts</string>
    <string name="tab_parameters">Parameters</string>
    <string name="tab_snapshot_dependencies">Snapshot dependencies</string>

    <!--progress creating new account dialog-->
    <string name="progress_dialog_content">Please wait…</string>

...
    <string name="download_artifact_retry_snack_bar_retry_button">Retry</string>

    <!--Retry load more snack-->
    <string name="load_more_retry_snack_bar_text">Error loading more data</string>

    <!--Empty list messages-->
    <string name="empty_list_message_artifacts">No artifacts</string>
    <string name="empty_list_message_builds">No builds</string>
    <string name="empty_list_message_running_builds">No running builds</string>
    <string name="empty_list_message_favorite_running_builds">No favorite running builds</string>
    <string name="empty_list_message_build_queue">Builds queue is empty</string>
    <string name="empty_list_message_favorite_build_queue">Favorite builds queue is empty</string>
    <string name="empty_list_message_projects_or_build_types">No projects or build configurations</string>
...
