...
<resources>
    <item type="id" name="itemTitle" />
    <item type="id" name="itemIcon" />
    <item type="id" name="itemSubTitle" />
    <item type="id" name="container" />
    <item type="id" name="artifact_fragment_list" />
    <item type="id" name="artifact_recycler_view" />
    <item type="id" name="account_recycler_view" />
    <item type="id" name="build_recycler_view" />
    <item type="id" name="overview_recycler_view" />
    <item type="id" name="properties_recycler_view" />
    <item type="id" name="snapshot_recycler_view" />
    <item type="id" name="build_queue_recycler_view" />
...
